create account functionality done

--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,8 @@
-
-REACT_APP_RAPID_API_KEY: 87298a70f1mshc961df887540304p1648d8jsnf09e026acc85
-
-
-
+REACT_APP_API_KEY = AIzaSyBL0B7ohmTz61fzWyzikdJQA0-6jC-OZcs
+REACT_APP_AUTH_DOMAIN = twitter-clone-2e8bd.firebaseapp.com
+REACT_APP_DATABASE_URL = https://twitter-clone-2e8bd-default-rtdb.firebaseio.com
+REACT_APP_PROJECT_ID = twitter-clone-2e8bd
+REACT_APP_STORAGE_BUCKET = twitter-clone-2e8bd.appspot.com
+REACT_APP_MESSAGING_SENDER_ID = 187578400114
+REACT_APP_APP_ID = 1:187578400114:web:2900ffec4b7087cae031eb
+REACT_APP_MEASUREMENT_ID = G-E6GL1NCZRD
